gccida/g1/rm_other_notes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1820:4: error: expected ';' after expression
rtx v5; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1820:5: error: use of undeclared identifier 'v5'
rtx v5; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1825:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1825:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1834:1: error: use of undeclared identifier 'v5'
v5 = head; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1839:17: error: use of undeclared identifier 'v5'
if ( *( _WORD *)v5 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1841:17: error: use of undeclared identifier 'v5'
v11 = ( __int64)v5[1]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1842:13: error: use of undeclared identifier 'v5'
if ( rtx == v5 ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1844:1: error: use of undeclared identifier 'v10'; did you mean 'v11'?
v10 = v5; 
^~~
v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1826:9: note: 'v11' declared here
__int64 v11; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1844:7: error: use of undeclared identifier 'v5'
v10 = v5; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1848:1: error: use of undeclared identifier 'v10'; did you mean 'v11'?
v10 = v5; 
^~~
v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1826:9: note: 'v11' declared here
__int64 v11; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1848:7: error: use of undeclared identifier 'v5'
v10 = v5; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1851:23: error: use of undeclared identifier 'v10'
v9.rtwint = ( __int64)v10; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1852:1: error: use of undeclared identifier 'v10'; did you mean 'v11'?
v10 = v10[1].fld[0].rtx; 
^~~
v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1826:9: note: 'v11' declared here
__int64 v11; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1852:7: error: use of undeclared identifier 'v10'
v10 = v10[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1854:27: error: use of undeclared identifier 'v10'; did you mean 'v11'?
*( _QWORD *)( v11 + 24) = v10; 
                          ^~~
                          v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1826:9: note: 'v11' declared here
__int64 v11; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1855:6: error: use of undeclared identifier 'v10'; did you mean 'v11'?
if ( v10 ) 
     ^~~
     v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1826:9: note: 'v11' declared here
__int64 v11; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1856:14: error: use of undeclared identifier 'v10'
*( _QWORD *)&v10[1] = v11; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1867:16: error: use of undeclared identifier 'v10'; did you mean 'v11'?
while ( rtx != v10 && *( _WORD *)v10 == 37 ); 
               ^~~
               v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/haifa-sched.c:1826:9: note: 'v11' declared here
__int64 v11; // rdi 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_other_notes/src/obj/haifa-sched.o] Error 1
